--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                     <a href="/tags/#web">web</a>
                 </span>
             </div>
-            <div class="content">
+            <div class="card-content">
                 <img src="../assets/images/work-in-progress.jpg" class="article-image" />
                 <p>Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
                     smakebit på
@@ -53,15 +53,15 @@
     </div>
     <div class="rightcolumn">
         <div class="card">
-            <div class="header">Søk</div>
+            <div class="card-header">Søk</div>
             <input type="text" />
         </div>
         <div class="card">
-            <div class="header">Populære nyheter</div>
+            <div class="card-header">Populære nyheter</div>
             <p>...</p>
         </div>
         <div class="card">
-            <div class="header">Følg oss</div>
+            <div class="card-header">Følg oss</div>
             <p>...</p>
         </div>
     </div>
