--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -21,16 +21,13 @@
         </div>
     </div>
     <div class="rightcolumn">
+        <app-article-tool-box></app-article-tool-box>
         <div class="card">
             <div class="card-header">Søk</div>
             <input type="text" />
         </div>
         <div class="card">
             <div class="card-header">Populære nyheter</div>
-            <p>...</p>
-        </div>
-        <div class="card">
-            <div class="card-header">Følg oss</div>
             <p>...</p>
         </div>
     </div>
