--- a/web/src/app/nav-bar/nav-bar.component.html
+++ b/web/src/app/nav-bar/nav-bar.component.html
@@ -19,20 +19,20 @@
             <li ngbNavItem>
                 <a ngbNavLink routerLink="/om-oss/">Om oss</a>
             </li>
-            <li [ngbNavItem]="3" *ngIf="(auth.isAuthenticated$ | async) == false" class="ml-auto">
+            <li [ngbNavItem]="3" *ngIf="isAuthenticated == false" class="ml-auto">
                 <a ngbNavLink href="#" (click)="loginWithRedirect()"><span class="glyphicon glyphicon-log-in"></span>
                     Login</a>
             </li>
-            <li ngbDropdown [ngbNavItem]="4" *ngIf="(auth.user$ | async) as profile" placement="bottom-right"
-                display="dynamic" class="nav-item ml-auto">
-                <a href (click)="false" ngbNavLink ngbDropdownToggle>
+            <li ngbDropdown [ngbNavItem]="4" placement="bottom-right" display="dynamic" class="nav-item ml-auto"
+                *ngIf="isAuthenticated">
+                <a href (click)="false" ngbNavLink ngbDropdownToggle *ngIf="profile">
                     <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle"
-                        style="width: 16px" /> {{ profile.name }}
+                        style="width: 16px" /> {{ profile?.name }}
                 </a>
-                <div ngbDropdownMenu>
+                <div ngbDropdownMenu *ngIf="profile">
                     <button ngbDropdownItem>
                         <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle"
-                            style="width: 40px" /> {{ profile.name }}
+                            style="width: 40px" /> {{ profile?.name }}
                     </button>
                     <div class="dropdown-divider"></div>
                     <button ngbDropdownItem routerLink="/profile/" *ngIf="profile">
