--- a/web/src/app/statute/statute.component.html
+++ b/web/src/app/statute/statute.component.html
@@ -2,14 +2,14 @@
     <div class="leftcolumn">
         <div class="card">
             <h2><strong>§1 Formål</strong></h2>
-            <p>Sideburn Whiskylaug er en whiskuklubb som skal være det naturlige kontaktpunktet mellom medlemmene
+            <p>Sideburn Whiskylaug er en whiskyklubb som skal være det naturlige kontaktpunktet mellom medlemmene
                 og evt. andre whiskyklubber og whiskyambassadører. Klubben skal være inkluderende for alle som har et
                 positivt forhold til whisky, og for medlemmer med varierende ambisjonsnivå. Sideburn Whiskylaug skal
                 fremme whiskykultur i vid forstand – også med et glimt i øyet.</p>
             <p>Sideburn Whiskylaug vil skape merverdi for sine medlemmer ved å:</p>
             <ul>
                 <li>Skape erfarings- og informasjonsutveksling mellom medlemmene i klubben.</li>
-                <li>Arrangere ett årlig årsmøte, som selvsagt inkluderer whiskysmaking.</li>
+                <li>Arrangere årsmøte, som selvsagt inkluderer whiskysmaking.</li>
                 <li>Formidle og tilby medlemmene ulike opplæringstilbud, samt gi råd/tips ved whiskykulturelle reiser.
                 </li>
                 <li>Fungere som et nav for innhenting av informasjon som medlemmene kan nyttiggjøre seg.</li>
@@ -22,15 +22,16 @@
                 Domenenavn på Internett er <a href="http://sideburnwhisky.no/"
                     rel="nofollow"><em>sideburnwhisky.no</em></a>.</p>
             <h2 id="vedtekter-§3Virksomhet"><strong>§3 Virksomhet</strong></h2>
-            <p>Sideburn Whiskylaug skal drive virksomheten primært gjennom hjemmesiden, Facebook, sosiale sammenkomster
-                og det årlige årsmøtet.
-                Virksomheten skal drives med så lite byråkrati som mulig, og driften skal være kostnadseffektiv.
-                Sideburn Whiskylaugs sete er hos styrets leder.</p>
+            <p>Sideburn Whiskylaug skal drive virksomheten primært gjennom hjemmesiden, på Facebook, sosiale
+                arrangementer og det årlige årsmøtet.
+                Virksomheten skal drives med så lite byråkrati som mulig, og driften skal være kostnadseffektiv.</p>
+            <p>Sideburn Whiskylaugs sete er hos styrets leder.</p>
             <h2 id="vedtekter-§4Medlemmer"><strong>§4 Medlemmer</strong></h2>
-            <p>Medlemmer er alle whiskyinteresserte personer som har betalt årsavgift til Sideburn Whiskylaug. Hvert
-                betalende medlem har én stemme.</p>
+            <p>Medlemmer er alle whiskyinteresserte enkeltpersoner som har betalt årsavgift til Sideburn Whiskylaug.
+                Hvert betalende medlem har én stemme.</p>
+            <p>Medlemmene har rett til å ta del i den aktivitet som utøves av og på vegne av klubben</p>
             <p>Medlemskap fordrer at kriterier er oppfylt. Styret godkjenner medlemskap.</p>
-            <p>Kriterier for medlemskap er at klubben har:</p>
+            <p>Kriterier for medlemskap i Sideburn Whiskylaug:</p>
             <ul>
                 <li>Kjenner minst ett av medlemmene i klubben.</li>
                 <li>Evnen til å være grei og snill, og forøvrig gjøre som man vil.</li>
@@ -68,9 +69,13 @@
             <h2 id="vedtekter-§8Eksklusjon"><strong>§8 Eksklusjon</strong></h2>
             <p>Dersom et medlem ikke lenger oppfyller kriteriene i §4 kan styret beslutte å ekskludere vedkommende
                 medlem.</p>
-            <h2 id="vedtekter-§9Opphør"><strong>§9 Opphør</strong></h2>
-            <p>Dersom Sideburn Whiskylaug velger å avslutte sin virksomhet skal eiendeler fordeles blant medlemmene.</p>
-            <h2 id="vedtekter-§10Endringavvedtekter"><strong>§10 Endring av vedtekter</strong></h2>
+            <h2 id="vedtekter-§9Mistillit"><strong>§9 Mistillit</strong></h2>
+            <p>Å fremme mistillit i forhold til tillitsvalgte tilligger årsmøtet. Vedtak fattes ved 2/3 kvalifisert
+                flertall.</p>
+            <h2 id="vedtekter-§10Opphør"><strong>§10 Opphør</strong></h2>
+            <p>Opphør av klubben kan besluttes av årsmøtet med 2/3 flertall. Dersom Sideburn Whiskylaug velger å
+                avslutte sin virksomhet skal eiendeler fordeles blant medlemmene.</p>
+            <h2 id="vedtekter-§11Endringavvedtekter"><strong>§11 Endring av vedtekter</strong></h2>
             <p>Endring av disse vedtektene fordrer 2/3 flertall på årsmøtet. Forslag til vedtektsendring må stå på
                 dagsorden og være kunngjort for Sideburn Whiskylaugs medlemmer minst to uker for årsmøtet.</p>
             <p>Vedtatt 2021-11-05. Oppdatert 2021-11-05</p>
