--- a/web/src/app/statute/statute.component.html
+++ b/web/src/app/statute/statute.component.html
@@ -34,9 +34,9 @@
             <p>Kriterier for medlemskap i Sideburn Whiskylaug:</p>
             <ul>
                 <li>Kjenner minst ett av medlemmene i klubben.</li>
-                <li>Evnen til å være grei og snill, og forøvrig gjøre som man vil.</li>
                 <li>Et positivt forhold til whisky.</li>
                 <li>Betalt årsavgift til Sideburn Whiskylaug.</li>
+                <li>Man skal ikke plage andre, man skal være grei og snill, og forøvrig kan man gjøre som man vil.</li>
             </ul>
             <h2 id="vedtekter-§5Årsmøte"><strong>§5 Årsmøte</strong></h2>
             <p>Årsmøtet skal avholdes en gang per år, gjerne i forbindelse med en whiskysmaking. Innkalling skal sendes
