--- a/web/src/app/article-editor/article-editor.component.html
+++ b/web/src/app/article-editor/article-editor.component.html
@@ -1,1 +1,20 @@
-<p>article-editor works!</p>
+<div class="row">
+    <div class="leftcolumn">
+        <div class="card">
+            <app-md-editor [compiled]="compiledMarkdown" [placeHolder]="startingValue"
+                (valueChanged)="onValueChanged($event)">
+            </app-md-editor>
+        </div>
+    </div>
+    <div class="rightcolumn">
+        <app-article-tool-box></app-article-tool-box>
+        <div class="card">
+            <div class="card-header">Søk</div>
+            <input type="text" />
+        </div>
+        <div class="card">
+            <div class="card-header">Populære nyheter</div>
+            <p>...</p>
+        </div>
+    </div>
+</div>
