--- a/web/src/app/article-tool-box/article-tool-box.component.html
+++ b/web/src/app/article-tool-box/article-tool-box.component.html
@@ -1,4 +1,4 @@
 <div class="card" *ngIf="isAuthenticated">
     <div class="card-header">Verktøy</div>
-    <p>...</p>
+    <p><a routerLink="/artikkelredigering">Ny artikkel</a></p>
 </div>
