--- a/web/src/app/article-editor/article-editor.component.html
+++ b/web/src/app/article-editor/article-editor.component.html
@@ -5,18 +5,33 @@
                 <li ngbNavItem>
                     <a ngbNavLink>Redigering</a>
                     <ng-template ngbNavContent>
-                        <textarea [placeholder]="startingValue"
-                            (keyup)="onValueChange($event)">{{articleBody}}</textarea>
+                        <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+                            <div class="leftcolumn">
+                                <label for="articleTitle">Tittel: </label>
+                                <input id="articleTitle" type="text" formControlName="articleTitle">
+                                <label for="articleSubject">Ingress: </label>
+                                <input id="articleSubject" type="text" formControlName="articleSubject">
+                            </div>
+                            <div class="rightcolumn">
+                                <img src="../assets/images/picture_placeholder.png" class="article-image-small" />
+                            </div>
+                            <label for="articleBody">Tittel: </label>
+                            <textarea id="articleBody" [placeholder]="startingValue"
+                                formControlName="articleBody"></textarea>
+                            <!-- (keyup)="onValueChange($event)"{{articleBody}} -->
+                        </form>
                     </ng-template>
                 </li>
                 <li ngbNavItem>
                     <a ngbNavLink>Forhåndsvisning</a>
                     <ng-template ngbNavContent>
-                        <h2>{{articleTitle}}</h2>
-                        <h6>{{articleSubject}}</h6>
+                        <h2>{{f.articleTitle.value}}</h2>
+                        <h6>{{f.articleSubject.value}}</h6>
                         <div class="meta">
-                            <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00" itemprop="datePublished">
-                                <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober 2021
+                            <time class="date dt-published" datetime="2021-10-14T05:15:00+00:00"
+                                itemprop="datePublished">
+                                <mat-icon aria-hidden="false" aria-label="Publisert">edit_calendar</mat-icon> 14 oktober
+                                2021
                             </time>
                             <span class="tags">
                                 <mat-icon aria-hidden="false" aria-label="Kategorier">sell</mat-icon>
