Started on image upload functions

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-  <div class="banner-small d-md-none"></div>
-  <div class="banner-med d-none d-md-block d-lg-none"></div>
-  <div class="banner-large d-none d-lg-block"></div>
+  <div class="banner-small d-md-none"><img class="image-small" src="../assets/images/logo-shadow.png" /></div>
+  <div class="banner-med d-none d-md-block d-lg-none"><img class="image-med" src="../assets/images/logo-shadow.png"/></div>
+  <div class="banner-large d-none d-lg-block"><img class="image-large" src="../assets/images/logo-shadow.png"/></div>
   <app-nav-bar></app-nav-bar>
 </div>
 <div class="content">
