--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="leftcolumn">
         <div class="card">
-            <ul ngbNav #nav="ngbNav" class="nav-tabs">
+            <ul ngbNav #nav="ngbNav" class="nav nav-tabs">
                 <li ngbNavItem>
                     <a ngbNavLink>Redigering</a>
                     <ng-template ngbNavContent>
