--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -68,6 +68,16 @@ body {
 
 .nav {
   background: $nav-background;
+  border-bottom-color: rgb(100, 100, 100);
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  background: $card-background;
+  border-bottom: 0px none $card-background;
+  border-left: 2px solid rgb(100, 100, 100);
+  border-top: 2px solid rgb(100, 100, 100);
+  border-right: 2px solid rgb(100, 100, 100);
+  color: $default-foreground;
 }
 
 a {
