--- a/web/src/app/components/home/home.component.html
+++ b/web/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
                 </span>
             </div>
             <div class="card-content">
-                <img src="../assets/images/work-in-progress.jpg" class="article-image" />
+                <img src="../assets/images/work-in-progress.jpg" class="article-image float-none float-md-left" />
                 <p>Vi er snart klare med litt mer innhold. Denne siden er tilgjengelig for å gi medlemmene en liten
                     smakebit på
                     hvordan det vil se ut. Vi tar gjerne imot tilbakemeldinger og endringsforlag.</p>
