Added more user logic

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,5 +8,5 @@
   <router-outlet></router-outlet>
 </div>
 <div class="footer">
-  <p> ©2021 <a href="https://github.com/bisand/sideburnwhisky.git">Sideburn Whiskylaug</a></p>
+  <p> ©2021 <a href="https://github.com/bisand/sideburnwhisky.git" target="_blank">Sideburn Whiskylaug</a></p>
 </div>
