--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -11,8 +11,7 @@
                                     <label for="articleTitle">Tittel: </label>
                                     <input id="articleTitle" type="text" formControlName="articleTitle">
                                     <label for="articleSubject">Ingress: </label>
-                                    <!-- <input id="articleSubject" type="text" formControlName="articleSubject"> -->
-                                    <textarea id="articleSubject" class="text-editor-ingress" formControlName="articleBody"></textarea>
+                                    <textarea id="articleSubject" class="text-editor-ingress" formControlName="articleSubject"></textarea>
                                 </div>
                                 <div class="rightcolumn" style="text-align: center; display: block;">
                                     <img [src]="imageUrl" class="article-image-small" />
