--- a/web/src/app/components/article-tool-box/article-tool-box.component.html
+++ b/web/src/app/components/article-tool-box/article-tool-box.component.html
@@ -1,4 +1,7 @@
 <div class="card" *ngIf="isAuthenticated">
     <div class="card-header">Verktøy</div>
-    <p><a routerLink="/artikkelredigering">Ny artikkel</a></p>
+    <a routerLink="/artikkelredigering">Ny artikkel</a>
+    <hr>
+    <h5>Upubliserte artikler</h5>
+    <p>...</p>
 </div>
