--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -6,8 +6,9 @@
                     <a ngbNavLink>Redigering</a>
                     <ng-template ngbNavContent>
                         <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
-                            <div class="group">
+                           <div class="group">
                                 <div class="leftcolumn">
+                                    <button type="button" class="btn btn-success">Ny artikkel</button>
                                     <label for="articleTitle">Tittel: </label>
                                     <input id="articleTitle" type="text" formControlName="articleTitle">
                                     <label for="articleSubject">Ingress: </label>
