--- a/web/src/app/components/nav-bar/nav-bar.component.html
+++ b/web/src/app/components/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul ngbNav #nav="ngbNav" class="navbar nav w-100">
+        <ul ngbNav #nav="ngbNav" class="navbar nav w-100 navbar-dark bg-dark">
             <li ngbNavItem>
                 <a ngbNavLink routerLink=".">Hjem</a>
             </li>
@@ -23,16 +23,13 @@
                 <a ngbNavLink href="#" (click)="loginWithRedirect()"><span class="glyphicon glyphicon-log-in"></span>
                     Login</a>
             </li>
-            <li ngbDropdown [ngbNavItem]="4" placement="bottom-right" display="dynamic" class="nav-item ml-auto"
-                *ngIf="isAuthenticated">
+            <li ngbDropdown [ngbNavItem]="4" placement="bottom-right" display="dynamic" class="nav-item ml-auto navbar-dark bg-dark" *ngIf="isAuthenticated">
                 <a href (click)="false" ngbNavLink ngbDropdownToggle *ngIf="profile">
-                    <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle"
-                        style="width: 16px" /> {{ profile?.name }}
+                    <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle" style="width: 16px" /> {{ profile?.name }}
                 </a>
-                <div ngbDropdownMenu *ngIf="profile">
-                    <button ngbDropdownItem>
-                        <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle"
-                            style="width: 40px" /> {{ profile?.name }}
+                <div ngbDropdownMenu *ngIf="profile" class="bg-dark">
+                    <button ngbDropdownItem class="">
+                        <img [src]="profile.picture" alt="Profile picture" class="nav-user-profile rounded-circle" style="width: 40px" /> {{ profile?.name }}
                     </button>
                     <div class="dropdown-divider"></div>
                     <button ngbDropdownItem routerLink="/brukerprofil/" *ngIf="profile">
