--- a/web/src/app/components/article-tool-box/article-tool-box.component.html
+++ b/web/src/app/components/article-tool-box/article-tool-box.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="isAuthenticated">
+<div class="card" *ngIf="isAuthenticated && articleWriterPermission">
     <div class="card-header">Verktøy</div>
     <a routerLink="/artikkelredigering">Ny artikkel</a>
     <hr>
