--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="leftcolumn">
-        <div class="card">
+        <div class="card" *ngIf="auth.isArticleWriter">
             <ul ngbNav #nav="ngbNav" class="nav nav-tabs">
                 <li ngbNavItem>
                     <a ngbNavLink>Redigering</a>
@@ -46,12 +46,12 @@
                             <textarea id="articleBody" [placeholder]="startingValue" class="text-editor-body" formControlName="articleBody"></textarea>
                             <div class="row row-cols-2 py-4">
                                 <div class="col text-left">
-                                    <button class="btn btn-success btn-md w-50" [disabled]="!selectedFiles" (click)="uploadFiles()">
+                                    <button *ngIf="auth.isArticleWriter" class="btn btn-success btn-md w-50" [disabled]="!selectedFiles" (click)="uploadFiles()">
                                         Lagre endringer
                                     </button>
                                 </div>
                                 <div class="col text-right">
-                                    <button class="btn btn-warning btn-md w-50" [disabled]="!selectedFiles" (click)="uploadFiles()">
+                                    <button *ngIf="auth.isArticlePublisher" class="btn btn-warning btn-md w-50" [disabled]="!selectedFiles" (click)="uploadFiles()">
                                         Publisere artikkel
                                     </button>
                                 </div>
