--- a/web/src/app/components/article-editor/article-editor.component.html
+++ b/web/src/app/components/article-editor/article-editor.component.html
@@ -8,7 +8,7 @@
                         <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
                            <div class="group">
                                 <div class="leftcolumn">
-                                    <button type="button" class="btn btn-success">Ny artikkel</button>
+                                    <button type="button" class="btn btn-success mt-3">Ny artikkel</button>
                                     <label for="articleTitle">Tittel: </label>
                                     <input id="articleTitle" type="text" formControlName="articleTitle">
                                     <label for="articleSubject">Ingress: </label>
